--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
+    "leaflet-canvas-marker": "^0.2.0",
     "ngx-bootstrap": "^5.3.2",
     "read-excel-file": "^4.0.5",
     "rxjs": "~6.4.0",
