--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "read-excel-file": "^4.0.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -37,6 +38,8 @@
     "@angular/cli": "~8.3.22",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@types/google.maps": "^3.45.6",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.8",
